--- a/src/index.css
+++ b/src/index.css
@@ -115,6 +115,7 @@ button:focus-visible {
   border: 1px solid #999;
   border-radius: 3px;
   overflow: hidden;
+  width: 100%;
 }
 .rc-mentions-dropdown {
   border: 1px solid #999;
