--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'monospace';
   line-height: 1.5;
   font-weight: 400;
 
@@ -62,6 +62,7 @@ button:focus-visible {
 }
 .rc-mentions > textarea,
 .rc-mentions-measure {
+  background-color: '#000';
   font-size: inherit;
   font-size-adjust: inherit;
   font-style: inherit;
@@ -112,7 +113,7 @@ button:focus-visible {
   cursor: pointer;
 }
 .rc-mentions {
-  font-size: 20px;
+  font-size: 14px;
   border: 1px solid #999;
   border-radius: 3px;
   overflow: hidden;
