--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -38,12 +38,12 @@ h1 {
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
+  border: 1.5px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: darkslateblue;
   cursor: pointer;
   transition: border-color 0.25s;
 }
