--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -12,6 +12,9 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+ul {
+  list-style: none;
+}
 
 a {
   font-weight: 500;
